fix scrollbar not visible in firefox bigger roll buttons

--- a/styles/alpha.less
+++ b/styles/alpha.less
@@ -6,6 +6,7 @@
   }
 
   form {
+    min-height: 0;
     height: 100%;
   }
 
@@ -133,7 +134,7 @@
     }
 
     .attribute-roll {
-      flex: 0 0 30px;
+      flex: 0 0 40px;
       text-align: center;
       border-bottom: none;
       display: flex;
